# rk

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
src/: ConcreteCareTaker.cpp  ConcreteMemento.h  ConcreteOrignator.cpp  ConcreteOrignator.h
tests/: CMakeLists.txt  TestCareTaker.cpp  TestMemento.cpp  TestOrignator.cpp
