add_executable(test_memento TestMemento.cpp)
target_link_libraries(test_memento PRIVATE memento_pattern)

add_executable(test_caretaker TestCareTaker.cpp)
target_link_libraries(test_caretaker PRIVATE memento_pattern)

add_executable(test_originator TestOrignator.cpp)
target_link_libraries(test_originator PRIVATE memento_pattern)